projects/15-analyze-research/02-network-monitering-reachableanalize/01-AWS Network Manager-Infrastructure-Performance/02-terraform/module/vpc/aws_vpc1/igw.tf
# インターネットゲートウェイリソース定義
resource "aws_internet_gateway" "igw" {
  vpc_id = aws_vpc.aws_vpc1.id
  tags = {
    Name = var.igw_name
  }
}
