projects/15-analyze-research/02-network-monitering-reachableanalize/01-AWS Network Manager-Infrastructure-Performance/02-terraform/module/vpc/aws_vpc1/vpc.tf
# VPCリソース定義
resource "aws_vpc" "aws_vpc1" {
  cidr_block           = var.vpc_cidr
  enable_dns_support   = true
  enable_dns_hostnames = true
  tags = {
    Name = var.vpc_name
  }
}
