projects/15-analyze-research/02-network-monitering-reachableanalize/01-AWS Network Manager-Infrastructure-Performance/02-terraform/module/vpc/aws_vpc1/nacl.tf
# NACLリソース定義
resource "aws_network_acl" "public" {
  vpc_id     = aws_vpc.aws_vpc1.id
  subnet_ids = [aws_subnet.public_1.id]
  tags = {
    Name = var.nacl_name
  }
}

resource "aws_network_acl_rule" "public_inbound" {
  network_acl_id = aws_network_acl.public.id
  rule_number    = 100
  egress         = false
  protocol       = "-1"
  rule_action    = "allow"
  cidr_block     = "0.0.0.0/0"
}

resource "aws_network_acl_rule" "public_outbound" {
  network_acl_id = aws_network_acl.public.id
  rule_number    = 100
  egress         = true
  protocol       = "-1"
  rule_action    = "allow"
  cidr_block     = "0.0.0.0/0"
}
